# blade

./: .gitignore  Cargo.toml
blade-asset/: Cargo.toml
blade-egui/: Cargo.toml
blade-egui/src/: lib.rs
blade-graphics/: Cargo.toml  README.md  check.sh
blade-graphics/src/: lib.rs  shader.rs  traits.rs  util.rs
blade-graphics/src/gles/: command.rs  egl.rs  mod.rs  pipeline.rs  resource.rs
blade-graphics/src/metal/: command.rs  mod.rs  pipeline.rs  resource.rs  surface.rs
blade-graphics/src/vulkan/: command.rs  init.rs  mod.rs  pipeline.rs  resource.rs  surface.rs
blade-helpers/: Cargo.toml
blade-macros/: Cargo.toml
blade-render/: Cargo.toml
blade-render/src/render/: debug.rs  dummy.rs  env_map.rs  mod.rs
blade-render/src/texture/: mod.rs
blade-util/src/: belt.rs
docs/: CHANGELOG.md
examples/bunnymark/: main.rs
examples/init/: main.rs
examples/mini/: main.rs
examples/move/: main.rs
examples/particle/: main.rs  particle.rs
examples/ray-query/: main.rs
examples/scene/: main.rs
examples/scene/data/: scene.ron
examples/vehicle/: main.rs
src/: lib.rs
